--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.15.11",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
