--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 90
 }
